Fix contrast issue in footer.

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,7 +1,8 @@
 footer {
   text-align: center;
   font-family: $ff-mono;
+  font-size: $fs-sm;
   width: 100%;
   padding: 2rem;
-  color: $clr-blue-gray;
+  color: $clr-light-blue-green;
 }
